--- a/class2/class2.html
+++ b/class2/class2.html
@@ -12,7 +12,7 @@
 <div class="A">
 </div>
 <div class="bcdefgh">
-    <div class="bcdefg">
+    <div>
         <div class="bcd">
             <div class="b"></div>
             <div class="b"></div>
