--- a/class4/class4.html
+++ b/class4/class4.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 
-<!--    <script src="https://kit.fontawesome.com/397354ed49.js" crossorigin="anonymous"></script>-->
+    <script src="https://kit.fontawesome.com/397354ed49.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -57,4 +57,3 @@
 </div>
 
 </body>
-</html>
